[gd_scene format=3 uid="uid://c6282d1ntncbr"]

[ext_resource type="Texture2D" uid="uid://bfklf2uqdewh0" path="res://icon.svg" id="1_4pp6f"]
[ext_resource type="Script" uid="uid://cuuvi4541rctm" path="res://minion/origin_minion.gd" id="1_l33th"]

[node name="OriginMinion" type="Control" unique_id=593908175]
custom_minimum_size = Vector2(192, 256)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2368.0
offset_bottom = -1184.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 120)
script = ExtResource("1_l33th")

[node name="Panel" type="Panel" parent="." unique_id=1914012810]
custom_minimum_size = Vector2(160, 240)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel" unique_id=1346524600]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Panel/ColorRect" unique_id=248459294]
position = Vector2(96, 88.00001)
scale = Vector2(0.609375, 0.59375006)
texture = ExtResource("1_4pp6f")

[node name="NameLabel" type="Label" parent="Panel" unique_id=1927534673]
layout_mode = 0
offset_left = 40.0
offset_top = 136.0
offset_right = 168.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="RaceLabel" type="Label" parent="Panel" unique_id=903084844]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackLabel" type="Label" parent="Panel" unique_id=704829359]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -28.0
offset_right = 24.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.57254905, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="Panel" unique_id=1280624557]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -28.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.48235294, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Panel" unique_id=1355009718]
layout_mode = 0
offset_left = 40.0
offset_top = 160.0
offset_right = 152.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0.3529412, 0.3529412, 0.3529412, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelSprite" type="Sprite2D" parent="Panel" unique_id=1662448085]
position = Vector2(32, 31.999998)
scale = Vector2(0.078947365, 0.076281294)
